# Hovercraft

./: .rosinstall  README.md  package.xml
hovercraft/: CMakeLists.txt  package.xml
hovercraft/src/: PID.py  calibrate_esc.py  controle.py  motors_control.py  pixhawk.py  rasp.py  trackbar.py  visao.py
hovercraft/urdf/: description.urdf
launch/: gazebo.launch
simulation/rviz/: urdf.rviz
simulation/src/: PID.py  controle.py  controle_sim.py  trackbar.py  visao_sim.py
src/: Dockerfile  calibrate_esc.py  colocar_codigos_aqui.py  controle.py  visao.py
